panko-compiletest/src/snapshots/panko_compiletest__typeck-panko__tests__cases__test_error_uncallable.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/test_error_uncallable.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: value of type `int` is not callable because it is not a function or function pointer
   ╭─[panko/tests/cases/test_error_uncallable.c:4:5]
   │
 4 │     42();
   │     ─┬  
   │      ╰── this is not callable because it is of type `int`
───╯

Error: value of type `void` is not callable because it is not a function or function pointer
   ╭─[panko/tests/cases/test_error_uncallable.c:5:5]
   │
 5 │     f()();
   │     ─┬─  
   │      ╰─── this is not callable because it is of type `void`
───╯
